[package]
name = "yew-test"
version = "0.1.0"
edition = "2021"
description = "A simple test app for Yew.rs"
readme = "README.md"
repository = "https://github.com/jesselooney/yew-test"
license = "GPL-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19"
